storage/internal/log/exception/exception_2023-08-31.log
2023-08-31 10:32:07 [ERROR] - uncaughtException: Unexpected token '}'
D:\Code\r-rfms\agros_net_server_node_git\database\prj_db.js:111
}
^

SyntaxError: Unexpected token '}'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\Code\r-rfms\agros_net_server_node_git\routes\page\route_data.js:6:15)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
2023-08-31 10:32:24 [ERROR] - uncaughtException: Unexpected token '}'
D:\Code\r-rfms\agros_net_server_node_git\database\prj_db.js:111
}
^

SyntaxError: Unexpected token '}'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\Code\r-rfms\agros_net_server_node_git\routes\page\route_data.js:6:15)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
2023-08-31 10:34:52 [ERROR] - uncaughtException: query is not defined
ReferenceError: query is not defined
    at Object.<anonymous> (D:\Code\r-rfms\agros_net_server_node_git\database\prj_db.js:105:22)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\Code\r-rfms\agros_net_server_node_git\routes\page\route_data.js:6:15)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
2023-08-31 10:39:43 [ERROR] - uncaughtException: query is not defined
ReferenceError: query is not defined
    at Object.<anonymous> (D:\Code\r-rfms\agros_net_server_node_git\database\prj_db.js:105:22)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\Code\r-rfms\agros_net_server_node_git\routes\page\route_data.js:6:15)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
